*(December 1st, 2008)*

* don't use the job id as the S3 file key, since it will conflict if we have multiple
  nodes running jobs.

*(November 25th, 2008)*

* remove google analytics tracking
* verify file downloads from S3 with MD5 checksum

*(November 24th, 2008)*

* add google analytics tracking so we know if anyone is launching it
* do file uploading to s3 in the background on the reporter
* update to rails 2.2.2
* clean up models moving code into the Utilities, remove the unneeded tests from the models
* make the send_file more generic, doing the specifics in the model itself.
* Use send verified to check MD5 sums on all files we upload, to make sure they get there.
* Catch/Ignore certain exceptions with hoptoad

*(November 19th, 2008)*

* change back to using apache
* add upload progress to get an idea of how far along the mgf file is
* add exception handling to watcher, reporter, beanstalk message queue
* force the node startup to run in production so it sends hoptoad messages
* sleep and retry if we get an unable to connect to beanstalkd error
* add logic into jobs to check for packing status
* check for stuck packing jobs in reporter in addition to chunks
* add started_pack_at into job table for assistance in checking for jobs stuck packing 
* keep trying to upload the manifest until successful in a job

*(November 17th, 2008)*

* Add Hoptoad Notifier for exception handling.
* Update reporter to check for stuck chunks every minute
* Reporter sleeps for 1 second if there is no message
* run the cleanup script by default after install

*(November 14th, 2008)*

* Change to use beanstalkd queue

*(November 13th, 2008)*

* Add priority to jobs (for new queue)
* Refactor MessageQueues to allow for easier switching

*(November 12th, 2008)*

* Remove apache web server and replace with thin
* Fix keypair launch bug

*(November 11th, 2008)*

* Add beanstalkd queue for move away from SQS